Fix reports table list overlapped by subtab
This patch fixes #8

--- a/simple.ovirt.brand/web_admin.css
+++ b/simple.ovirt.brand/web_admin.css
@@ -233,3 +233,8 @@ body {
 .simple-checkbox {
   padding-right: 10px;
 }
+
+.actionPanelPopupMenuBar {
+    position: relative;
+    z-index: 99999;
+}
